struct TheTest {
  1: optional i32 field1;
  2: optional list<i32> field2;
} 